WIP - fixing photo alignment

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -41,14 +41,43 @@ html {
 .pic {
   background-repeat: no-repeat;
   background-position: center;
-  min-height: 160px;
-  max-height: 160px;
-  min-width: 130px;
-  max-width: 130px;
+  min-height: 275px;
+  max-height: 275px;
+/*  min-width: 49%;
+  max-width: 49%;
+  margin-right: 1%;*/
+}
+
+.bio {
+  min-height: 70px;
+  max-height: 70px;
+/*  min-width: 49%;
+  max-width: 49%;
+  margin-right: 1%;*/
+}
+
+.bio-section {
+  float: left;
+  clear: left;
+  min-width: 49%;
+  max-width: 49%;
+  margin-right: 1%;
 }
 
 #tim_mckay {
   background-image: url('TimMcKay.jpg');
+}
+
+#marianne_mckay {
+  background-image: url('MarianneMcKay.jpg');
+}
+
+#ryan_mckay {
+  background-image: url('RyanMcKay.jpg');
+}
+
+#adam_mckay {
+  background-image: url('AdamMcKay.jpg');
 }
 
 /*///// RESPONSIVENESS /////*/
